<resources>
    <string name="app_name">My Application</string>
    <string name="welcome_to_fiore_science">Welcome to Fiore Science</string>
    <string name="fiore_science">Welcome to Fiore Science</string>
    <string name="sat" />
    <string name="fri" />
    <string name="_1">1</string>
    <string name="backward"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="go">GO</string>
    <string name="todo">TODO</string>
    <string name="resources">RESOURCES</string>
    <string name="to_do_list">TO-DO LIST</string>
    <string name="calendar">CALENDAR</string>
    <string name="profile">PROFILE</string>
    <string name="home">HOME</string>
</resources>